src/objects/Utility_Business_RulesNew__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Days_Out_Window__c</fullName>
        <label>Days Out Window</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Window__c</fullName>
        <label>Days in Window</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_up_to_Window__c</fullName>
        <label>Days up to Window</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Window_Days__c</fullName>
        <label>Window Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Utility Business RulesNew</label>
</CustomObject>